# course_work

./: .gitignore  README.md  main.py  plan.txt  pyproject.toml  utils.py
src/: main.py
tests/: file.json  tests_format.py  tests_sorted.py
utils/: utils.py
